f5-k8s-bigip1-ctlr_vxlan.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cc-k8s-to-bigip1
  namespace: f5-vxlan-lingque
spec:
  # DO NOT INCREASE REPLICA COUNT
  replicas: 1
  template:
    metadata:
      name: k8s-bigip-ctlr
      labels:
        app: k8s-bigip-ctlr
    spec:
      # Name of the Service Account bound to a Cluster Role with the required
      # permissions
      serviceAccountName: bigip-ctlr
      containers:
        - name: k8s-bigip-ctlr
          image: "10.1.1.100:60080/f5networks/k8s-bigip-ctlr:1.7.1"
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            # See the k8s-bigip-ctlr documentation for information about
            # all config options
            # https://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest
            "--bigip-username=admin",
            "--bigip-password=admin",
            "--bigip-url=10.1.1.1",
            "--bigip-partition=LingQue",
            "--pool-member-type=cluster",
            "--flannel-name=/Common/flannel_vxlan"
            ]
